# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import markersRouter from "./markers";
 import redemptionsRouter from "./redemptions";
 import statsRouter from "./stats";
+import discoveriesRouter from "./discoveries";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(authRouter);
 router.use(markersRouter);
 router.use(redemptionsRouter);
 router.use(statsRouter);
+router.use(discoveriesRouter);
 
 export default router;
